crates/analyzer/tests/snapshots/errors__string_capacity_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: string capacity exceeded
  ┌─ [snippet]:3:13
  │
3 │   String<3>("too long")
  │             ^^^^^^^^^^ this string has length 8; expected length <= 3


